--- a/lectures/L02 - Indices and Logarithms.ipynb
+++ b/lectures/L02 - Indices and Logarithms.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy, math\n",
@@ -17,8 +21,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>For you:</b> L2 Challenge: by moving only one number, rearrange $62 - 1 = 63$ so that it is numerically correct. Swapping numbers counts as moving two numbers! Please send answers to <a href=\"mailto:philip.fowler@ndm.ox.ac.uk\">philip.fowler@ndm.ox.ac.uk</a> before the next lecture.\n",
+    "# Warm-up exercises\n",
+    "\n",
+    "\n",
+    "\\begin{align*}\n",
+    "&1. \\quad \\frac{51000}{6.3} &=\\\\\n",
+    "&2. \\quad \\frac{3 \\times 10^7}{4.5} &=\\\\\n",
+    "&3. \\quad \\frac{10^4}{74} &=\\\\\n",
+    "&4. \\quad \\frac{7000}{8.6 \\times 10^2} &=\\\\\n",
+    "&5. \\quad \\frac{3800}{0.65} &=\\\\\n",
+    "&6. \\quad \\frac{5.5 \\times 10^6}{73} &=\\\\\n",
+    "&7. \\quad \\frac{360}{2 \\times \\pi} &=\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "8. What is the molarity of 2.5 l of a solution containing 0.75 mol of solute?\n",
+    "\n",
+    "9. Your volume $=$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Brainteaser\n",
+    "\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b> By moving only one number, rearrange $62 - 1 = 63$ so that it is numerically correct. Swapping numbers counts as moving two numbers! Please send answers to \n",
+    "   <a href=\"mailto:philip.fowler@ndm.ox.ac.uk\">philip.fowler@ndm.ox.ac.uk</a> before the next lecture.\n",
     "</div>"
    ]
   },
@@ -28,9 +58,45 @@
    "source": [
     "# Key mathematical concepts (continued from L01)\n",
     "\n",
-    "## Examples of Good and Bad Graphs\n",
+    "## Examples of Bad Graphs\n",
     "\n",
-    "FIXME: include here?"
+    "There are many ways to mislead your audience when plotting data. Including, but not limited to\n",
+    "* not showing the full extent of an axis (emphasises a trend that may not be there)\n",
+    "* using too large a range for an axis (underemphasises possible trends)\n",
+    "* deliberately confusing (no labels, no title)\n",
+    "* using the wrong representation\n",
+    "* using logarithmic scales unnecessarily\n",
+    "* not plotting errors/confidence limits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![A bad graph](images/badgraph-smallpox.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![A bad graph](images/xkcd-badgraph1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![A bad graph](images/xkcd-badgraph2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Good graphs\n",
+    "\n",
+    "If you want to read more about the *art* of visualising data (this is not part of this course!), I'd strongly recommend the work of [Edward Tufte](https://www.edwardtufte.com/tufte/). He has some beautiful books."
    ]
   },
   {
@@ -39,7 +105,32 @@
    "source": [
     "## Inequalities\n",
     "\n",
-    "FIXME: include here?"
+    "We will be using symbols like $>$ and $\\ge$. \n",
+    "* $a>b$ means \"$a$ is greater than $b$\" \n",
+    "* $a\\ge b$ means \"$a$ is greater than or equal to $b$\".\n",
+    "\n",
+    "They can be combined to specify a *range*.\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "\\begin{align*}\n",
+    "-8 &< 4x-12 &\\le 24 \\quad &\\text{add 12}\\\\\n",
+    "4 &< 4x &\\le 36 \\quad &\\text{divide by 4}\\\\\n",
+    "1 &< x &\\le 9 \\quad\n",
+    "\\end{align*}\n",
+    "\n",
+    "So, if $x$ can only be an integer, then it could take one of $\\{2,3,4,5,6,7,8,9\\}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b>\n",
+    "$$5 < 3x-1 < 14$$<br>\n",
+    "</div>"
    ]
   },
   {
@@ -57,8 +148,8 @@
     "\n",
     "To keep this equality, if I do a mathematical operation on one side, I **must** do it to the other side. \n",
     "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<img src=\"images/thinking-face.png\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<img src=\"images/tick.png\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
     "<b>Tip:</b> Clearly layout your mathematics with (i) each equation is on its own line on the page, (ii) the = signs of each equation lie underneath one another and (iii) the operation you are applying to each side of the equation clearly identified\n",
     "</div>\n",
     "\n",
@@ -114,8 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -134,21 +229,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_2150610835257184661() {\n",
+       "            function code_toggle_16390038252991103102() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_2150610835257184661()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_16390038252991103102()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
     "<img src=\"images/curtis.jpg\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
     "<b>Common misconception:</b> You CANNOT \"take the power inside the bracket\". This is wrong. See below.\n",
     "</div>\n",
@@ -525,8 +620,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Questions for you:</b><br>\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b><br>\n",
     "1. What is $x$ if $y=10^x = 40000000000?$<br>\n",
     "2. What is $x$ if $y=10^x = 0.004$?\n",
     "</div>"
@@ -822,8 +918,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -842,21 +942,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_10958200480599655994() {\n",
+       "            function code_toggle_2146378623193498781() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_10958200480599655994()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_2146378623193498781()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +1012,7 @@
     "\\log(x) \\neq \\log(y) + \\log(z)\n",
     "$$\n",
     "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
     "<img src=\"images/curtis.jpg\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
     "<b>Common misconception:</b> You CANNOT \"divide through by logarithms\" as that is wrong (and makes no sense since logarithm is a mathematical operation). This means you can only simplify terms with logarithms so far!\n",
     "</div>\n"
@@ -979,8 +1079,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -999,21 +1103,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_17592383239836772196() {\n",
+       "            function code_toggle_1438772193693984670() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_17592383239836772196()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_1438772193693984670()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,8 +1164,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1080,21 +1188,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_8164289995693574723() {\n",
+       "            function code_toggle_4761297800363573756() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_8164289995693574723()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_4761297800363573756()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,16 +1245,21 @@
     "\n",
     "Our data are therefore well-described by the equation $y= 3.02 x^{0.50}$ which we can check by substituting values of $x$ from the original table. It also lets us predict that when $x=100$,$y=30.2$.\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Note:</b> Without logarithms, we would have been unable to fit this equation to our data.\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<img src=\"images/thinking-face.png\" width=50 title=\"Hmm\" style=\"vertical-align:top\"/>\n",
+    "<b>Thought:</b> Without logarithms, we would have been unable to fit this equation to our data!\n",
     "</div>\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1165,21 +1278,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_8267196891097763446() {\n",
+       "            function code_toggle_10819510776496353697() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_8267196891097763446()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_10819510776496353697()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
