--- a/lectures/reference.ipynb
+++ b/lectures/reference.ipynb
@@ -7,24 +7,33 @@
     "<span style=\"color:red\">Text</span> red text\n",
     "\n",
     "\n",
-    "\n",
     "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Warning:</b> This alert box indicates a dangerous or potentially negative action.\n",
+    "<img src=\"images/curtis.jpg\" width=50 title=\"Curtis is not happy\" style=\"vertical-align:top\"/>\n",
+    "<b>Common misconception:</b> The square root of $(a^2 + b^2) \\ne \\sqrt{a^2} + \\sqrt{b^2}$. We can simplify $\\sqrt{a^2} + \\sqrt{b^2} = a+b$, and hence if this was true, then $y=(a+b)^2$ but when we expand the bracket on the RHS we get $y=a^2+2ab+b^2$ which is NOT what we started with so this is wrong.\n",
     "</div>\n",
     "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Example:</b> Use yellow boxes for examples that are not inside code cells, or use for mathematical formulas if needed. Typically also used to display warning messages.\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b><br>\n",
+    "1. What is $x$ if $y=10^x = 40000000000?$\n",
     "</div>\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Note:</b> Use blue boxes (alert-info) for tips and notes.</div>\n"
+    "<img src=\"images/tick.png\" width=50 title=\"Tip\" style=\"vertical-align:top\"/>\n",
+    "<b>Tip:</b> Clearly layout your mathematics with (i) each equation is on its own line on the page, (ii) the = signs of each equation lie underneath one another and (iii) the operation you are applying to each side of the equation clearly identified\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<img src=\"images/thinking-face.png\" width=50 title=\"Hmm\" style=\"vertical-align:top\"/>\n",
+    "<b>Thought:</b> Clearly layout your mathematics with (i) each equation is on its own line on the page, (ii) the = signs of each equation lie underneath one another and (iii) the operation you are applying to each side of the equation clearly identified\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Wake up exercises\n",
+    "## Warm up exercises\n",
     "\n",
     "<div class=\"alert alert-block alert-danger\">\n",
     "<b>Warning:</b> No calculators!\n",
