--- a/lectures/L02 - Indices and Logarithms.ipynb
+++ b/lectures/L02 - Indices and Logarithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -229,21 +229,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_16390038252991103102() {\n",
+       "            function code_toggle_13324482009167760161() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_16390038252991103102()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_13324482009167760161()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
     "\n",
     "\\begin{align*}\n",
     "\\frac{a^x}{a^y} &= \\frac{b}{c} \\quad & \\text{using the second law of indices above}\\\\\n",
-    "a^{x-y} & \\frac{b}{c} \\quad &= \\text{taking logarithms to the base a of both sides} \\\\\n",
+    "a^{x-y} &= \\frac{b}{c} \\quad & \\text{taking logarithms to the base a of both sides} \\\\\n",
     "\\log_a (a^{x-y}) &= \\log_a \\left (\\frac{b}{c} \\right )\\quad & \\text{taking the log to base a is the inverse to raising a to a power} \\\\\n",
     "x - y &= \\log_a  \\left (\\frac{b}{c} \\right )\n",
     "\\end{align*}\n",
@@ -825,7 +825,7 @@
     "\\log_3 9 &=& 2\\\\\n",
     "         &=& \\log_a c\\\\\n",
     "         &=& \\frac{\\log_b c}{\\log_b a}\\\\\n",
-    "         &=& \\frac{\\log_10 9}{\\log_10 3}\\\\\n",
+    "         &=& \\frac{\\log_{10} 9}{\\log_{10} 3}\\\\\n",
     "         &=& \\frac{0.954}{0.477}\\\\\n",
     "         &=& 2\n",
     "\\end{eqnarray*}"
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -942,21 +942,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_2146378623193498781() {\n",
+       "            function code_toggle_2513285183299450687() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_2146378623193498781()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_2513285183299450687()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1103,21 +1103,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_1438772193693984670() {\n",
+       "            function code_toggle_13727761689571289728() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_1438772193693984670()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_13727761689571289728()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,13 +1147,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#($\\log_{10} x$) | Y ($\\log_{10} y$) |"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "First, let's transform the data by taking logarithms to base 10 of both sides:\n",
     "\n",
-    "| x | y       | X ($\\log_{10} x$) | Y ($\\log_{10} y$) |\n",
-    "|---|--    ---| --                |  ----------- |\n",
+    "| x | y       | X $=\\log_{10} x$ | Y $=\\log_{10} y$ |\n",
+    "|---|----|------|------------|\n",
     "| 4.0 | 6.0   | 0.6 | 0.78 |\n",
     "| 16.0 | 12.0 | 1.20 | 1.08 |\n",
     "| 25.0 | 15.0 | 1.40 | 1.18 |\n",
@@ -1164,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1188,21 +1197,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_4761297800363573756() {\n",
+       "            function code_toggle_15041586508241740227() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_4761297800363573756()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_15041586508241740227()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1278,21 +1287,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_10819510776496353697() {\n",
+       "            function code_toggle_4235635970943230266() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_10819510776496353697()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_4235635970943230266()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
