creating PDFs for L01, 02

--- a/lectures/L03 - Introducing Calculus.ipynb
+++ b/lectures/L03 - Introducing Calculus.ipynb
@@ -129,7 +129,9 @@
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
     "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
-    "<b>Answer to Week 2 challenge:</b> By moving only one number, rearrange $62 - 1 = 63$ so that it is numerically correct:\n",
+    "<b>For you:</b>\n",
+    "Answer to Week 2 challenge. \n",
+    "By moving only one number, rearrange $62 - 1 = 63$ so that it is numerically correct:\n",
     "</div>"
    ]
   },
@@ -139,7 +141,8 @@
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
     "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
-    "<b>Week 3 challenge:</b> A camel has 300 bananas, and she has to eat 1 per mile as she goes along to fuel her locomotion. However, she can only carry 100 at a time. What is the maximum distance from her starting point in the dessert she can reach? Please send answers to <a href=\"mailto:philip.fowler@ndm.ox.ac.uk\">philip.fowler@ndm.ox.ac.uk</a> before the start of week 3.\n",
+    "    <b>For you:</b>\n",
+    "    Week 3 challenge. A camel has 300 bananas, and she has to eat 1 per mile as she goes along to fuel her locomotion. However, she can only carry 100 at a time. What is the maximum distance from her starting point in the dessert she can reach? Please send answers to <a href=\"mailto:philip.fowler@ndm.ox.ac.uk\">philip.fowler@ndm.ox.ac.uk</a> before the start of week 3.\n",
     "</div>"
    ]
   },
@@ -170,7 +173,7 @@
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
     "<img src=\"images/thinking-face.png\" width=50 title=\"Hmm\" style=\"vertical-align:top\"/>\n",
-    "You need calculus to answer this.\n",
+    "    <b>Thought</b>: You need calculus to answer this.\n",
     "</div>"
    ]
   },
