nearly finished L06 (all in L05 mind you)

--- a/quantitative_biochemistry/Lecture 04 - Trigonometry and Differentiation.ipynb
+++ b/quantitative_biochemistry/Lecture 04 - Trigonometry and Differentiation.ipynb
@@ -1244,7 +1244,7 @@
     "\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{dy}{dx} &= \\lim_{h \\rightarrow 0} \\frac{[f(x) + hg'(x)][f(x) + hg'(x)] - f(x)g(x)}{h}\\\\\n",
+    "\\frac{dy}{dx} &= \\lim_{h \\rightarrow 0} \\frac{[f(x) + hf'(x)][g(x) + hg'(x)] - f(x)g(x)}{h}\\\\\n",
     "&= \\lim_{h \\rightarrow 0} \\frac{[f(x)g(x) +hf'(x)g(x) +hf(x)g'(x) + h^2f'(x)g'(x)] - f(x)g(x)}{h}\\\\\n",
     "&= \\lim_{h \\rightarrow 0} \\frac{[hf'(x)g(x) +hf(x)g'(x) + h^2f'(x)g'(x)]}{h}\\\\\n",
     "&= \\lim_{h \\rightarrow 0} f'(x)g(x) +f(x)g'(x) + hf'(x)g'(x)\\\\\n",
