--- a/quantitative_biochemistry/Lecture 08 - Integration II.ipynb
+++ b/quantitative_biochemistry/Lecture 08 - Integration II.ipynb
@@ -311,7 +311,7 @@
     "We can't do this *directly*, so because this looks like $\\int f(g(v)).dv$ let's try *substituting* \n",
     "\n",
     "\\begin{align*}\n",
-    "z &= -\\frac{mv^2}{2kT}\\\\\n",
+    "z &= -\\frac{mv^2}{2kT} \\quad& v^2= -\\frac{2kTz}{m}\\\\\n",
     "\\frac{dz}{dv} &= -\\frac{m.2v}{2kT}\\\\\n",
     "&= -\\frac{mv}{kT}\\\\\n",
     "\\frac{dv}{dz} &= -\\frac{kT}{mv}\\\\\n",
@@ -327,8 +327,311 @@
     "\\begin{align*}\n",
     "\\bar{v} &= Q \\int^{v=\\infty}_{v=0} v^3e^{-\\frac{mv^2}{2kT}}.dv\\\\\n",
     "&= Q \\int^{z=0}_{z=-\\infty} v^3 \\frac{kT}{mv} e^z. dz\\\\\n",
-    "&= Q \\int^{z=0}_{z=-\\infty} v^2 \\frac{kT}{m} e^z. dz \\quad &\\text{substitute for }v\\\\\n",
-    "&= Q \\int^{z=0}_{z=-\\infty} v^2 \\frac{kT}{m} e^z. dz \\quad &\\text{substitute for }v\\\\\n",
+    "&= Q \\int^{z=0}_{z=-\\infty} v^2 \\frac{kT}{m} e^z. dz \\quad &\\text{substitute for last }v\\\\\n",
+    "&= Q \\int^{z=0}_{z=-\\infty} -\\frac{2kTz}{m} \\frac{kT}{m} e^z. dz \\\\\n",
+    "&= -2Q\\left (\\frac{kT}{m} \\right )^2 \\int^{z=0}_{z=-\\infty}  z e^z. dz \\\\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Whilst it feels like we are making progress, we STILL can't integrate the form $\\int xe^x.dx$. We NEED another method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Integration by parts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's explore this new method then come back and solve our Maxwell-Boltzmann integral.\n",
+    "\n",
+    "Recall that\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{d}{dx} (f(x)g(x)) &= f(x)\\frac{dg(x)}{dx} + \\frac{df(x)}{dx}g(x)\\\\\n",
+    "&= f(x)g'(x) + f'(x)g(x) \\quad & \\text{integrate both sides w.r.t $x$ between $x=a$ and $x=b$}\\\\\n",
+    "\\int^b_a \\frac{d}{dx} (f(x)g(x)).dx &= \\int^b_a f(x)g'(x).dx + \\int^b_a f'(x)g(x).dx\\\\\n",
+    "\\left [ f(x)g(x) \\right ]^b_a &= \\int^b_a f(x)g'(x).dx + \\int^b_a f'(x)g(x).dx \\quad & \\text{rearrange}\\\\\n",
+    "\\int^b_a f(x)g'(x).dx &= \\left [ f(x)g(x) \\right ]^b_a - \\int^b_a f'(x)g(x).dx\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You'll also see this written in the following forms which are all equivalent\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\int^b_a f.g'.dx &= \\left [ f.g \\right ]^b_a - \\int^b_a f'.g.dx\\\\\n",
+    "\\int^b_a u.\\frac{dv}{dx}.dx &= \\left [ u.v \\right ]^b_a - \\int^b_a \\frac{du}{dx}.v.dx\\\\\n",
+    "\\int^b_a u.v'.dx &= \\left [ u.v \\right ]^b_a - \\int^b_a u'.v.dx\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $f(x) \\equiv f \\equiv u$ and $g(x) \\equiv g \\equiv v$. I'll mostly use $u$ and $v$. Hence our general result is\n",
+    "\n",
+    "$$\\boxed{\\int^b_a u.v'.dx = \\left [ u.v \\right ]^b_a - \\int^b_a u'.v.dx}$$\n",
+    "\n",
+    "As ever, since we need to identify $u$ and $v$ and then calculate $\\frac{du}{dx}$ and $\\frac{dv}{dx}$ it really helps to make a TABLE."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So what? How does that help us? It let's us replace one integral with an evaulation and another integral? Or, as xkcd puts it:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Or as xkcd tells us...](images/xkcd-integration_by_parts.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The trick is to CHOOSE $u$ and $v$ such that after you've applied *integration by parts* the 'new' integral is simpler, and hopefully, doable. \n",
+    "\n",
+    "The problem is that if you apply *integration by parts* where it is inappropriate, or you make the wrong choice of $u$ and $v$, you will make it MORE complex not less."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example\n",
+    "\n",
+    "$$\\int^b_a x.\\sqrt{x+1}.dx $$\n",
+    "\n",
+    "### Making the right choice\n",
+    "\n",
+    "Choose\n",
+    "\n",
+    "\\begin{align*}\n",
+    "u &= x \\quad & u' &=1\\\\\n",
+    "v' &= \\sqrt{x+1} \\quad & v &=\\frac{2}{3}(x+1)^{3/2}\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Then we can apply *integration by parts*\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\int^b_a x.\\sqrt{x+1}.dx  &= \\left [ x.\\frac{2}{3}(x+1)^{3/2} \\right ]^b_a - \\int^b_a \\frac{2}{3}(x+1)^{3/2}.dx \\\\\n",
+    "&= \\left [ \\frac{2}{3}x(x+1)^{3/2} \\right ]^b_a - \\left [ \\frac{2}{3}.\\frac{2}{5}(x+1)^{5/2} \\right ]^b_a\\\\\n",
+    "&= \\left [ \\frac{2}{3}x(x+1)^{3/2} - \\frac{4}{15}(x+1)^{5/2} \\right ]^b_a\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "So that works! Notice how the integral on the RHS is simpler than what we started with which is what allowed us to do it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making the wrong choice\n",
+    "\n",
+    "But what happens if we choose $u$ and $v'$ the 'other way round'\n",
+    "\n",
+    "\\begin{align*}\n",
+    "u &= \\sqrt{x+1} \\quad & u' &=\\frac{1}{2}(x+1)^{-1/2}\\\\\n",
+    "v' &= x \\quad & v &=\\frac{1}{2}x^2\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\int^b_a x.\\sqrt{x+1}.dx  &= \\left [ \\sqrt{x+1}.\\frac{1}{2}x^2 \\right ]^b_a - \\int^b_a \\frac{1}{2}(x+1)^{-1/2}.\\frac{1}{2}x^2.dx \\\\\n",
+    "&= \\left [ \\frac{1}{2}x^2\\sqrt{x+1} \\right ]^b_a - \\frac{1}{4}\\int^b_a \\frac{x^2}{\\sqrt{x+1}}.dx \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Our maths is correct; the LHS = RHS, but by incorrectly choosing $u$ and $v'$ we've swapped an integral we can't do for an integral we DEFINITELY can't do. Not helpful.\n",
+    "\n",
+    "Usually the algebra does get more complicated and your lines get longer, but there comes a point where e.g. terms start to cancel or you can do an integral. If this doesn't happen and it just gets more and more complex then that is often a sign you've made a mistake. I call this 'algebra hell' and with practice you'll be able to instintively 'feel' when you've made a mistake. (\"It should be getting better by now!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If it is an indefinite integral\n",
+    "\n",
+    "In this case there will be no limits and we'll have to include a *constant of integration* every time we integrate.\n",
+    "\n",
+    "$$\\int x.\\sqrt{x+1}.dx $$\n",
+    "\n",
+    "Choose\n",
+    "\n",
+    "\\begin{align*}\n",
+    "u &= x \\quad & u' &=1\\\\\n",
+    "v' &= \\sqrt{x+1} \\quad & v &=\\frac{2}{3}(x+1)^{3/2} +c_1\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Then we can apply *integration by parts*\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\int^b_a x.\\sqrt{x+1}.dx  &=  x.\\left ( \\frac{2}{3}(x+1)^{3/2} +c_1 \\right )  - \\int^b_a \\frac{2}{3}(x+1)^{3/2}+c_1.dx \\\\\n",
+    "&= \\frac{2}{3}x(x+1)^{3/2} +c_1x - \\left ( \\frac{2}{3}.\\frac{2}{5}(x+1)^{5/2} +c_1x +c_2\\right )\\\\\n",
+    "&= \\frac{2}{3}x(x+1)^{3/2} - \\frac{4}{15}(x+1)^{5/2}  +c_2\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "So it still works, but you need to be careful and consistent with your *constants of integration*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b><br>\n",
+    "Use integration by parts to integration this:\n",
+    "</div>\n",
+    "\\begin{align*}\n",
+    "\\int x\\sin x.dx\n",
+    "\\end{align*}\n",
+    "\n",
+    "\\begin{align*}\n",
+    "u &=  \\quad  \\quad \\quad & u' &=\\\\\n",
+    "v' &=  \\quad \\quad & v &=\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "$$\\int^b_a u.v'.dx = \\left [ u.v \\right ]^b_a - \\int^b_a u'.v.dx$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Back to calculating the expectation value of the speed of a molecule of gas...\n",
+    "\n",
+    "We want to integrate the form\n",
+    "\n",
+    "$$ \\int^\\infty_0 ze^z.dz $$\n",
+    "\n",
+    "Apply *integration by parts*:\n",
+    "\n",
+    "$$\\int^b_a u.v'.dx = \\left [ u.v \\right ]^b_a - \\int^b_a u'.v.dx$$\n",
+    "\n",
+    "Choose $u$ and $v$\n",
+    "\n",
+    "\\begin{align*}\n",
+    "u &=  z\\quad & u' &= 1\\\\\n",
+    "v' &=  e^z \\quad & v &= e^z\\\\\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "\\int_{-\\infty}^0 ze^z.dz &= \\left [ z.e^z \\right ]^\\infty_0 - \\int_{-\\infty}^0 1.e^z.dz\\\\\n",
+    "&= \\left [ z.e^z \\right ]^\\infty_0 - \\left [ e^z \\right ]_{-\\infty}^0\\\\\n",
+    "&= \\left [ z.e^z -e^z \\right ]_{-\\infty}^0\\\\\n",
+    "&= -1\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Back to the Maxwell-Boltzmann..\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bar{v} &= -2Q\\left (\\frac{kT}{m} \\right )^2 \\int^{z=0}_{z=-\\infty}  z e^z. dz \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Woo. We've just shown that the integral is $-1$! So we can solve for the average (or expected) speed!\n",
+    "\n",
+    "$$\\bar{v} = 2Q\\left (\\frac{kT}{m} \\right )^2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "remember we grouped some constants together and called them $Q$, so let's substitute them back. Since $Q = 4 \\pi \\left ( \\frac{m}{2 \\pi kT} \\right )^{3/2}$\n",
+    "\n",
+    "$$\\bar{v} = 2\\times4 \\pi \\left ( \\frac{m}{2 \\pi kT} \\right )^{3/2}\\left (\\frac{kT}{m} \\right )^2$$\n",
+    "\n",
+    "Let's simplify this:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bar{v} &= 8\\pi \\left ( \\frac{1}{2 \\pi} \\right )^{3/2}\\left (\\frac{kT}{m} \\right )^{1/2}\\\\\n",
+    "&= \\sqrt{\\frac{8}{\\pi}.\\frac{kT}{m}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Let's check this makes sense. First, consider the *dimensions* of the constants $k,T,m$. We can cheat a bit since $kT$ has units of energy so its dimensions are [ML$^2$T$^{-2}$] and mass has dimensions [M]. Hence $\\frac{kT}{m}$ has dimensions [L$^2$T$^{-2}$] but we are taking the square root, so the dimensions of the RHS (and hence the LHS) are [LT$^{-1}$], which is 'length per unit time' i.e. a speed!\n",
+    "\n",
+    "Another way of checking is putting some values in and seeing if the values we get are reasonable. Let's calculate the average speed of air at room temperature. If we model air as nitrogen, then $m = 0.028$ kg/mol, or $m =4.67 \\times 10^{-26}$ kg. Boltzmann's constant $k= 1.38 \\times 10^{-23}$ and $T=298$ K. Putting all that together we get $\\bar{v} = 473 $ m/s (3.s.f). Is that reasonable? Well we know that the speed of sound in air is 330 m/s (3 seconds gap between lightning and thunder means the storm is 1 km away) and so that is in the right range!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tips for choosing $u$ and $v'$\n",
+    "\n",
+    "Look at the integrand and choose the first function in the last for $u$:\n",
+    "\n",
+    "1. Log (e.g. $\\ln x$)\n",
+    "2. Algebraic (e.g. $x^2$)\n",
+    "3. Trigonmetric (e.g. $\\sin x$)\n",
+    "4. Exponetial (e.g. $e^x$)\n",
+    "\n",
+    "We do the same for $v'$ but this time we start at the bottom of the list and work our way UP.\n",
+    "\n",
+    "An easy way of remembering this is to notice that the first letters spell out LATE. \n",
+    "\n",
+    "$$\\boxed{\\text{Hence for }u\\text{ we chose the first function we encounter in LATE whilst for }v'\\text{ use ETAL.}}$$\n",
+    "\n",
+    "The aim is to pick $u$ and $v'$ such that the new integral we get from applying *integration by parts* is simpler or no more complicated! If it is, we've probably made the wrong choice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Integrating a logathrim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider \n",
+    "\n",
+    "$$\\int  \\ln x.dx$$ \n",
+    "\n",
+    "It is not obvious how we can do this! There is a trick, however, and that is to rewrite it as\n",
+    "\n",
+    "$$\\int  1.\\ln x.dx$$ \n",
+    "\n",
+    "LATE suggests that we try $u = \\ln x$ and $v' =1$ so let's give that a go\n",
+    "\n",
+    "\\begin{align*}\n",
+    "u &=  \\ln x\\quad & u' &= \\frac{1}{x}\\\\\n",
+    "v' &=  1 \\quad & v &= x + c_1\\\\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "\\int  1.\\ln x.dx &= \\ln x(x +c_1) - \\int x.\\frac{1}{x}.dx\\\\\n",
+    "&= x \\ln x +c_1\\ln x - \\int dx\\\\\n",
+    "&= x \\ln x +\n",
     "\\end{align*}"
    ]
   },
@@ -337,9 +640,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "}"
-   ]
+   "source": []
   }
  ],
  "metadata": {
