--- a/quantitative_biochemistry/Lecture 08 - Integration II.ipynb
+++ b/quantitative_biochemistry/Lecture 08 - Integration II.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -15,6 +15,29 @@
     "from matplotlib import patches\n",
     "from src import code_toggle\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Warm-up exercises\n",
+    "\n",
+    "\\begin{align*}\n",
+    "&1. \\quad y = e^{2x} &\\quad y' &=\\\\\n",
+    "&2. \\quad y=\\ln x &\\quad y' &=\\\\\n",
+    "&3. \\quad y=\\ln 5x &\\quad y' &=\\\\\n",
+    "&4. \\quad \\int^{50}_5 2 dx &\\quad &=\\\\\n",
+    "&5. \\quad \\int^{4}_2 3x. dx &\\quad &=\\\\\n",
+    "&6. \\quad \\int^{2}_1 4x^{-3}. dx &\\quad &=\\\\\n",
+    "&7. \\quad \\int^{\\pi/2}_0 \\cos x. dx &\\quad &=\\\\\n",
+    "&8. \\quad \\int^{e}_1 x^{-1}. dx &\\quad &=\\\\\n",
+    "&9. \\quad \\int x^{-1}. dx &\\quad &=\\\\\n",
+    "&10. \\quad \\int \\cos 2x. dx &\\quad &=\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "11. What is the H$^+$ concentraion of a solution with a pH of 3?\n",
+    "12. What would I have to do to the solution to make it have a pH of 7?\n"
    ]
   },
   {
@@ -40,9 +63,7 @@
     "5. Perform the integration.\n",
     "6. Substitute for $u$ in the result to that $x$ is again the variable. \n",
     "7. If it is a definite integral, put in the appropriate limits and simplify the result.\n",
-    "8. If it is an indefinite integral, don't forget the constant of integration!\n",
-    "\n",
-    "If "
+    "8. If it is an indefinite integral, don't forget the constant of integration!"
    ]
   },
   {
@@ -83,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -107,21 +128,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_1332292918159888317() {\n",
+       "            function code_toggle_16361097858613650536() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_1332292918159888317()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_16361097858613650536()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -210,21 +231,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_16938613053698016549() {\n",
+       "            function code_toggle_1774633176153915624() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_16938613053698016549()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_1774633176153915624()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +424,12 @@
    "source": [
     "The trick is to CHOOSE $u$ and $v$ such that after you've applied *integration by parts* the 'new' integral is simpler, and hopefully, doable. \n",
     "\n",
-    "The problem is that if you apply *integration by parts* where it is inappropriate, or you make the wrong choice of $u$ and $v$, you will make it MORE complex not less."
+    "The problem is that if you apply *integration by parts* where it is inappropriate, or you make the wrong choice of $u$ and $v$, you will make it MORE complex not less.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<img src=\"images/curtis.jpg\" width=50 title=\"Curtis is not happy\" style=\"vertical-align:top\"/>\n",
+    "<b>Common misconception:</b> It is very easy to incorrectly choose $u$ and $v'$ when integrating by parts; if you do you will make the integral more complex rather than easier.\n",
+    "</div>"
    ]
   },
   {
@@ -461,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### If it is an indefinite integral\n",
+    "### What about when we have an indefinite integral?\n",
     "\n",
     "In this case there will be no limits and we'll have to include a *constant of integration* every time we integrate.\n",
     "\n",
@@ -612,11 +638,11 @@
     "\n",
     "$$\\int  \\ln x.dx$$ \n",
     "\n",
-    "It is not obvious how we can do this! There is a trick, however, and that is to rewrite it as\n",
+    "It is not obvious how we can do this! (We don't know any function that when differentiated yields $\\ln x$). There is a trick, however, and that is to rewrite it as\n",
     "\n",
     "$$\\int  1.\\ln x.dx$$ \n",
     "\n",
-    "LATE suggests that we try $u = \\ln x$ and $v' =1$ so let's give that a go\n",
+    "LATE suggests that we try $u = \\ln x$ and $v' =1$ so let's give that a go.\n",
     "\n",
     "\\begin{align*}\n",
     "u &=  \\ln x\\quad & u' &= \\frac{1}{x}\\\\\n",
@@ -629,18 +655,73 @@
    "metadata": {},
    "source": [
     "\\begin{align*}\n",
-    "\\int  1.\\ln x.dx &= \\ln x(x +c_1) - \\int x.\\frac{1}{x}.dx\\\\\n",
-    "&= x \\ln x +c_1\\ln x - \\int dx\\\\\n",
-    "&= x \\ln x +\n",
+    "\\int  1.\\ln x.dx &= (x +c_1)\\ln x - \\int (x+c_1).\\frac{1}{x}.dx\\\\\n",
+    "&= x \\ln x +c_1\\ln x - \\int 1 + \\frac{c_1}{x}dx\\\\\n",
+    "&= x \\ln x + c_1\\ln x - x + c_1 \\ln x + c_2\\\\\n",
+    "&= x \\ln x - x +c_2\n",
     "\\end{align*}"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Let's check this one by differentiating it. Notice that the first term is a product of two functions.\n",
+    "\n",
+    "\n",
+    "$$y= x\\ln x + c_2$$\n",
+    "\n",
+    "\\begin{align*}\n",
+    "u = x \\quad & u' = 1\\\\\n",
+    "v = \\ln x \\quad & v' = \\frac{1}{x}\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Hence,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{dy}{dx} &= x.\\frac{1}{x} + 1.\\ln x - 1\\\\\n",
+    "&= 1 + \\ln x - 1\\\\\n",
+    "&= \\ln x\n",
+    "\\end{align*}\n",
+    "\n",
+    "So it it is correct. We could have considered the definite integral ($\\int^b_a \\ln x.dx$ which is a bit easier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Differentiation is usually straightforward, integration is a skill\n",
+    "\n",
+    "![differentiation v integration](images/xkcd-differentiation_and_integration.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b>\n",
+    "Answer to Week 4 challenge. \n",
+    "The camel can travel 153.333 miles into the desert.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "    <b>For you:</b>     Week 5 challenge. A farmer has to get a grain sack, a fox and a chicken across a river\n",
+    "in a boat. He can only carry himself and one of his burdens in one\n",
+    "trip, but the fox will eat the chicken if he leaves them alone\n",
+    "together, and the chicken will eat the grain given half a chance.\n",
+    "How can he get them all across intact?\n",
+    "Please send answers to <a href=\"mailto:philip.fowler@ndm.ox.ac.uk\">philip.fowler@ndm.ox.ac.uk</a> before the start of week 6.\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
