--- a/quantitative_biochemistry/Lecture 07 - Integration.ipynb
+++ b/quantitative_biochemistry/Lecture 07 - Integration.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy, math\n",
@@ -53,7 +57,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -72,14 +80,14 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_5446298290273120876() {\n",
+       "            function code_toggle_11919077846731436002() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_5446298290273120876()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_11919077846731436002()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
@@ -161,14 +169,14 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_1312733590704297930() {\n",
+       "            function code_toggle_11969584976892913147() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_1312733590704297930()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_11969584976892913147()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
@@ -540,14 +548,14 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_17832251111993190909() {\n",
+       "            function code_toggle_3458316969385519591() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_17832251111993190909()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_3458316969385519591()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
